--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,14 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# editor/IDE
+*.swp
+*.swo
+*.swn
+*.un~
+.vscode
+.idea
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
+build/
